--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
-
 <html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="a524406d63e175aebdc74c3e-text/javascript"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js" type="a524406d63e175aebdc74c3e-text/javascript"></script>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link href="quiz.css" rel="stylesheet" type="text/css">
-</head><body>
-<nav class="navbar navbar-inverse navbar-fixed-bottom navbar-left">
-<div class="container-fluid">
-<ul class="nav navbar-nav">
-<li>
-<a href="https://gelselvagem.club/termos.html" target="_blank">Termos de Uso</a>
-</li>
-<li>
-<a href="https://gelselvagem.club/politica.html" target="_blank">Política de Privacidade</a>
-</li>
-</ul>
-</div>
-</nav>
-<div class="cover fundopreto">
-<div class="cover-image"></div>
-<div class="container">
-<div class="row">
-<div class="col-md-12 text-center">
-<h1 class="branco">Você Tem Mais de 18 Anos?</h1>
-<br>
-<br>
-<a class="btn btn-lg btn-success" href="https://gelselvagem.club/quiz-face-2">SIM</a>&nbsp;
-<a class="btn btn-danger btn-lg" href="https://gelselvagem.club/quiz-face-2">NÃO</a>
-</div>
-</div>
-</div>
-</div>
-<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="a524406d63e175aebdc74c3e-|49" defer=""></script></body></html>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="quiz.css" rel="stylesheet" type="text/css">
+  </head><body>
+    <nav class="navbar navbar-inverse navbar-fixed-bottom navbar-left">
+      <div class="container-fluid">
+        <ul class="nav navbar-nav">
+          <li>
+            <a href="https://gelselvagem.club/termos.html" target="_blank">Termos de Uso</a>
+          </li>
+          <li>
+            <a href="https://gelselvagem.club/politica.html" target="_blank">Política de Privacidade</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="cover fundopreto">
+      <div class="cover-image"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h1 class="branco">Você Tem Mais de 18 Anos?</h1>
+            <br>
+            <br>
+            <a class="btn btn-lg btn-success" href="https://gelselvagem.club/quiz-face-2">SIM</a>&nbsp;
+            <a class="btn btn-danger btn-lg" href="https://gelselvagem.club/quiz-face-2">NÃO</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+
+</body></html>
