--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <h1 class="branco">Você Tem Mais de 18 Anos?</h1>
             <br>
             <br>
-            <a class="btn btn-lg btn-success" href="https://gelselvagem.club/quiz-face-2">SIM</a>&nbsp;
-            <a class="btn btn-danger btn-lg" href="https://gelselvagem.club/quiz-face-2">NÃO</a>
+            <a class="btn btn-lg btn-success" href="https://noticiadodia.github.io/questionario2/">SIM</a>&nbsp;
+            <a class="btn btn-danger btn-lg" href="https://noticiadodia.github.io/questionario2/">NÃO</a>
           </div>
         </div>
       </div>
