--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h1 class="branco">Você Tem Mais de 18 Anos?</h1>
+            <h1 class="branco">Já acertou alguma vez os 14 pontos da L.O.T.O.F.A.C.I.L?</h1>
             <br>
             <br>
             <a class="btn btn-lg btn-success" href="https://noticiadodia.github.io/questionario2/">SIM</a>&nbsp;
