--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <h1 class="branco">Já acertou alguma vez os 14 pontos da L.O.T.O.F.A.C.I.L?</h1>
             <br>
             <br>
-            <a class="btn btn-lg btn-success" href="https://noticiadodia.github.io/questionario2/">SIM</a>&nbsp;
-            <a class="btn btn-danger btn-lg" href="https://noticiadodia.github.io/questionario2/">NÃO</a>
+            <a class="btn btn-lg btn-success" href="https://apps-inovadores.github.io/questionario-2/">SIM</a>&nbsp;
+            <a class="btn btn-danger btn-lg" href="https://apps-inovadores.github.io/questionario-2/">NÃO</a>
           </div>
         </div>
       </div>
