--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h1 class="branco">Já acertou alguma vez os 14 pontos da L.O.T.O.F.A.C.I.L?</h1>
+            <h1 class="branco">Já acertou alguma vez os 14 pontos da LOTO.FACIL?</h1>
             <br>
             <br>
             <a class="btn btn-lg btn-success" href="https://apps-inovadores.github.io/questionario-2/">SIM</a>&nbsp;
