--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <div class="container-fluid">
         <ul class="nav navbar-nav">
           <li>
-            <a href="https://noticiadodia.club/termos.html" target="_blank">Termos de Uso</a>
+            <a href="#" target="_blank">Termos de Uso</a>
           </li>
           <li>
-            <a href="https://noticiadodia.club/politica.html" target="_blank">Política de Privacidade</a>
+            <a href="#" target="_blank">Política de Privacidade</a>
           </li>
         </ul>
       </div>
